[project]
name = "apimon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi[standard]>=0.139.0",
    "passlib>=1.7.4",
    "psycopg2>=2.9.12",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=1.4,<1.5",
]
